# code-generator-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-22-code-generator-mcp-template-server.md
scratch/: run_samples.py  sample_data.json  test_run.py
scripts/: configure_agent.py
src/code_generator_mcp/: __init__.py  config.py  schemas.py  server.py  templates.py  utils.py
tests/: test_api.py  test_server.py  test_templates.py  test_utils.py
