[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-generator-mcp"
version = "0.1.0"
description = "FastMCP server for code generation templates targeting coder expert models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
